--- a/style.css
+++ b/style.css
@@ -283,6 +283,7 @@ html {
     text-align: center;
     color: white;
     margin-top: 100px;
+    padding-top:5%;
 }
 .hireme ul {
     list-style-type: none;
