--- a/style.css
+++ b/style.css
@@ -116,15 +116,22 @@ html {
     }
 }
 
-.container, .container-2, .container-3 {
-    margin-left: 30%;
-    padding: 0; 
+.container-2, .container-3 {
+    padding-left: 50px;
     display: flex;
     font-weight: 600;
 }
+.container{
+    padding-left: 50px;
+    height: fit-content;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap-reverse;
+    font-weight: 600;
+}
 .paragraph {
-    height: 40vh;
-    width: 40vw;
+    height: 400px;
+    width: 500px;
     display: flex;
     align-items: end;
     justify-content: flex-end;
@@ -134,12 +141,81 @@ html {
     font-weight: 500;
     color: #ffffff;
 }
-.image {
-    height: 40vh;
-    width: 60vw ;
-    margin: 0;
-    padding: 0 ;
+/*this is st */
+.image{
+    height: 400px;
+    width: 400px;
+    display: flex;
+    flex-wrap: wrap;
+    align-content: flex-end;
+    justify-content: center; 
 }
+#profile_img {
+    height: 300px;
+    background-color: white;
+    border-radius: 50%;
+    animation: shadowAnimation 3s infinite;
+  
+  }
+  
+  
+  
+  @keyframes shadowAnimation {
+  
+    0% {
+  
+      box-shadow: 0 0 5px 10px rgba(21, 60, 111, 0.5);
+  
+    }
+
+    25% {
+        box-shadow: 0px 0px 7.5px 7.5px rgba(92, 102, 132, 0.5) ;
+    }
+  
+    50% {
+  
+      box-shadow: 0px 0px 10px 10px rgba(0, 255, 242, 0.5);
+  
+    }
+
+    75% {
+        box-shadow: 0px 0px 7.5px 7.5px rgba(92, 102, 132, 0.5) ;
+
+    }
+  
+    100% {
+  
+      box-shadow: 0px 0px 5px 10px rgba(21, 60, 111, 0.5);
+  
+    }
+  
+  }
+  
+  
+  
+  /* Using a pseudo-element for more control */
+  
+  img::after {
+  
+    content: '';
+  
+    position: absolute;
+  
+    top: 0;
+  
+    left: 0;
+  
+    width: 100%;
+  
+    height: 100%;
+  
+    box-shadow: 10px 10px 10px 10px rgba(0, 0, 0, 0.5);
+  
+    animation: shadowAnimation 2s infinite;
+  
+  }
+
+/*this is end*/
 .container-2 .paragraph-2 {
     color: #fff;
     height: 15vh;
@@ -165,7 +241,6 @@ html {
     padding-right: 10%;
     padding-top: 5%;
     color: #fff;
-    text-align: center;
 }
 .highlighted {
     color: aqua;
@@ -267,21 +342,35 @@ html {
     margin-left: 10%;
     margin-right: 10%;
     background: transparent;
-    border: 5px solid aqua;
-    border-radius: 15px;
 }
 
 
 /* Styles for medium to large screens */
-.project-1, .project-2 {
-    margin: 5%;
+.projects{
+    margin: 10px;
     padding: 5px;
-    height: 40vh;
-    width: 30vw;
-    border: 5px solid green;
+    height: 300px;
+    width: 400px;
+    border:3px solid #02e70d ;
     border-radius: 15px;
     overflow: hidden;
 }
+.projects:hover {
+    height: fit-content;
+    transform: scale(1.05);
+}
+
+.projects p::after{
+    opacity:1;
+}
+
+.project-img{
+    height: 300px;
+    width: 400px;
+}
+
+
+
 
 /* Styles for smaller screens */
 @media (max-width: 1024px) {
